--- a/index.html
+++ b/index.html
@@ -651,17 +651,7 @@
     }, {
         checkArity: false,
         completion: true,
-        greetings: ' __       __   __    ______                             __       \n' +
-            '|  \\     /  \\_/  \\  /      \\                           |  \\      \n' +
-            '| ▓▓\\   /  ▓▓   ▓▓ |  ▓▓▓▓▓▓\\     __   __   __  ______ | ▓▓____  \n' +
-            '| ▓▓▓\\ /  ▓▓▓\\▓▓▓▓  \\▓▓__| ▓▓    |  \\ |  \\ |  \\/      \\| ▓▓    \\ \n' +
-            '| ▓▓▓▓\\  ▓▓▓▓ | ▓▓  /      ▓▓    | ▓▓ | ▓▓ | ▓▓  ▓▓▓▓▓▓\\ ▓▓▓▓▓▓▓\\\n' +
-            '| ▓▓\\▓▓ ▓▓ ▓▓ | ▓▓ |  ▓▓▓▓▓▓     | ▓▓ | ▓▓ | ▓▓ ▓▓    ▓▓ ▓▓  | ▓▓\n' +
-            '| ▓▓ \\▓▓▓| ▓▓_| ▓▓_| ▓▓_____     | ▓▓_/ ▓▓_/ ▓▓ ▓▓▓▓▓▓▓▓ ▓▓__/ ▓▓\n' +
-            '| ▓▓  \\▓ | ▓▓   ▓▓ \\ ▓▓     \\     \\▓▓   ▓▓   ▓▓\\▓▓     \\ ▓▓    ▓▓\n' +
-            ' \\▓▓      \\▓▓\\▓▓▓▓▓▓\\▓▓▓▓▓▓▓▓      \\▓▓▓▓▓\\▓▓▓▓  \\▓▓▓▓▓▓▓\\▓▓▓▓▓▓▓ \n' +
-            '                                                                 \n' +
-            '                                                                 '
+        greetings: '¡CAMBIA LA WEB!'
     });
 </script>
 
