--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
                 'així com l\'accés a recursos compartits, seguint els procediments donats.\n' +
                 'En un cas pràctic d\'una xarxa local ja instal·lada: documentar els processos de prova i verificació realitzats,\n' +
                 'Segons especificacions tècniques.</pre>')
-            const video = $('<iframe width="560" height="315" src="https://www.youtube.com/embed/5KlCeHYBs7o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>')
+            const video = $('<iframe width="560" height="315" src="https://www.youtube.com/embed/sEiN7cxKiII" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>')
             const sp = $('<pre> </pre>')
             const sp1 = $('<pre> </pre>')
             const sp2 = $('<pre> </pre>')
@@ -553,7 +553,7 @@
                 'Fa un ús adequat dels comentaris per aclarir parts del codi.\n' +
                 'Tabulador bloqueja correctament perquè el codi s\'entengui.\n' +
                 'Realitza el treball en el temps proposat i amb la metodologia establerta.</pre>')
-            const video = $('<iframe width="560" height="315" src="https://www.youtube.com/embed/5KlCeHYBs7o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>')
+            const video = $('<iframe width="560" height="315" src="https://www.youtube.com/embed/lLxfApiphpY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>')
             const sp = $('<pre></pre>')
             const sp1 = $('<pre> </pre>')
             const sp2 = $('<pre> </pre>')
@@ -670,7 +670,7 @@
             const sp4 = $('<pre> </pre>')
             const sp5 = $('<pre> </pre>')
             const sp6 = $('<pre> </pre>')
-            const video = $('<iframe width="560" height="315" src="https://www.youtube.com/embed/5KlCeHYBs7o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>')
+            const video = $('<iframe width="560" height="315" src="https://www.youtube.com/embed/rHcjaMZyWrg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>')
 
             if (x == 'uf1') {
                 this.echo(uf1);
@@ -815,7 +815,7 @@
             const sp4 = $('<pre> </pre>')
             const sp5 = $('<pre> </pre>')
             const sp6 = $('<pre> </pre>')
-            const video = $('<iframe width="560" height="315" src="https://www.youtube.com/embed/5KlCeHYBs7o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>')
+            const video = $('<iframe width="560" height="315" src="https://www.youtube.com/embed/SpQU5HeoKiE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>')
             if (x == 'uf1') {
                 this.echo(uf1);
             }
@@ -926,7 +926,7 @@
             const sp4 = $('<pre> </pre>')
             const sp5 = $('<pre> </pre>')
             const sp6 = $('<pre> </pre>')
-            const video = $('<iframe width="560" height="315" src="https://www.youtube.com/embed/5KlCeHYBs7o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>')
+            const video = $('<iframe width="560" height="315" src="https://www.youtube.com/embed/XnvqjvQRI-8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>')
             if (x == 'uf1') {
                 this.echo(uf1);
             }
@@ -1021,7 +1021,10 @@
 
         },
         help: function() {
-            const test = $ ('')
+            const test = $ ('m + 1 2 3 4 5 6 7 8 para ver los modulos (m1 uf1)\n' +
+            'm1 + uf 1 2 3 4 5 6... (m1 uf1)\n' +
+            'm + 1 2 3 4 5 6 7 8 video\n' +
+            'm + 1 2 3 4 5 6 7 8 tree')
             this.echo(test);
 
         },
