--- a/index.html
+++ b/index.html
@@ -459,6 +459,9 @@
             if (x == 'uf3') {
                 this.echo(uf3);
             }
+            if (x == 'video') {
+                this.echo(video);
+            }
             if (x == 'tree') {
                 this.echo(sp);
                 this.echo(m5);
@@ -580,6 +583,9 @@
             if (x == 'uf6') {
                 this.echo(uf6);
             }
+            if (x == 'video') {
+                this.echo(video);
+            }
             if (x == 'tree') {
                 this.echo(sp);
                 this.echo(m8);
@@ -689,6 +695,9 @@
             }
             if (x == 'uf6') {
                 this.echo(uf6);
+            }
+            if (x == 'video') {
+                this.echo(video);
             }
             if (x == 'tree') {
                 this.echo(sp);
@@ -834,6 +843,9 @@
             if (x == 'uf6') {
                 this.echo(uf6);
             }
+            if (x == 'video') {
+                this.echo(video);
+            }
             if (x == 'tree') {
                 this.echo(sp);
                 this.echo(m6);
@@ -926,7 +938,7 @@
             const sp4 = $('<pre> </pre>')
             const sp5 = $('<pre> </pre>')
             const sp6 = $('<pre> </pre>')
-            const video = $('<iframe width="560" height="315" src="https://www.youtube.com/embed/XnvqjvQRI-8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>')
+            const video = $('<iframe width="560" height="315" src="https://www.youtube.com/embed/XnvqjvQRI-8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><iframe width="560" height="315" src="https://www.youtube.com/embed/St1VHFPfVyc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>')
             if (x == 'uf1') {
                 this.echo(uf1);
             }
@@ -944,6 +956,9 @@
             }
             if (x == 'uf6') {
                 this.echo(uf6);
+            }
+            if (x == 'video') {
+                this.echo(video);
             }
             if (x == 'tree') {
                 this.echo(sp);
