--- a/index.html
+++ b/index.html
@@ -1036,10 +1036,10 @@
 
         },
         help: function() {
-            const test = $ ('m + 1 2 3 4 5 6 7 8 para ver los modulos (m1 uf1)\n' +
+            const test = $ ('<pre>m + 1 2 3 4 5 6 7 8 para ver los modulos (m1)\n' +
             'm1 + uf 1 2 3 4 5 6... (m1 uf1)\n' +
             'm + 1 2 3 4 5 6 7 8 video\n' +
-            'm + 1 2 3 4 5 6 7 8 tree')
+            'm + 1 2 3 4 5 6 7 8 tree</pre>')
             this.echo(test);
 
         },
